--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Coding Quiz</title>
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <script src="./script.js"></script>
   </head>
 
   <body>
