--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Coding Quiz</title>
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script src="./script.js"></script>
+    
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <div class="timer">Time: <span id="time">0</span></div>
 
     <div class="wrapper">
-      <div id="start-screen" class="hide">
+      <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
           Try to answer the following code-related questions within the time
@@ -43,7 +43,8 @@
       <div id="feedback" class="feedback hide"></div>
     </div>
 
-    <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/logic.js"></script>
+    <!-- <script src="./assets/js/questions.js"></script>
+    <script src="./assets/js/logic.js"></script> -->
+    <script src="./script.js"></script>
   </body>
 </html>
